# niels-lab

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env.prod  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  routes.py
backend/makemore/: makemore-ag.py  makemore-clean.py  makemore-hyper.py  makemore-mlp.py  makemore.py
backend/migrations/: env.py
backend/migrations/versions/: 4a499861282d_create_posts_and_projects.py  737f8ab72e03_.py
backend/nn/: micrograd.py  torch-neural-net.py  torch-nn.py
backend/scripts/: add_and_read_post.py
frontend/src/app/: page.tsx
frontend/src/app/api/debug/: route.ts
frontend/src/app/posts/: page.tsx
frontend/src/app/posts/[slug]/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: types.ts
