[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.0",
    "psycopg[binary]>=3.2.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
